# varro_dst

./: .gitignore  AGENTS.md  CLAUDE.md  SKILL.md  pyproject.toml  setup.md
.codex-plugin/: plugin.json
deploy/: host_setup.sh
docs/: geo_index.md
docs/dim/: benkod.md  byganv.md  bygherre.md  cofog.md  crema.md  db.md  db_10.md  ddu_audd.md  ddu_udd.md  degurba_dst.md  disco.md  disco_ls.md  ebops.md  ecoicop.md  ejendom.md  esa.md  esr_sekt.md  esspros.md  icha.md  icha_hp.md  kn.md  kommunegrupper.md  kulturemner.md  landbrugslandsdele.md  lande_psd.md  lande_uht_bb.md  lande_uhv.md  nuts.md  okologisketail.md  overtraedtype.md  sitc.md  soc_status.md  socio.md  valuta_iso.md
docs/geo/: kommuner.parquet  postnumre.parquet  retskredse.parquet  sogne.parquet  storkredse.parquet
docs/subjects/arbejde_og_indkomst/befolkningens_arbejdsmarkedsstatus/: arbejdskraftundersøgelsen_(aku).md  lønmodtagerorganisationer.md  unge_uden_for_beskæftigelse_og_uddannelse_(neet).md
docs/subjects/arbejde_og_indkomst/beskæftigelse_og_arbejdsløshed/: arbejdstidsregnskab.md  lønmodtagere.md
docs/subjects/arbejde_og_indkomst/formue/: formue_og_gæld.md  husholdningernes_formue_i_fast_ejendom.md
docs/subjects/arbejde_og_indkomst/fravær_og_arbejdskonflikter/: fravær_fra_arbejde.md  strejker_og_lockout.md
dst_skill/: api.py  cli.py  column_values.py  config.py  setup.py
scripts/: dst-column-values  dst-setup  sync_docs.py
skills/dst/: SKILL.md
skills/varro-dst/: SKILL.md  setup.md
skills/varro-dst/docs/: subject_hierarchy.md  table_index.jsonl
(+2464 files in other folders)
