[project]
name = "varro-dst"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "rapidfuzz>=3.10.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
dst-column-values = "dst_skill.cli:main"
dst-column-values-api = "dst_skill.api:main"
dst-setup = "dst_skill.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dst_skill"]
